--- a/player_playlist_receiver.html
+++ b/player_playlist_receiver.html
@@ -118,6 +118,7 @@ This shows a very simple receiver app to show how you could support video playli
                 }
             };
 
+            // Override MediaManager onLoad
             var onLoadOrig = mediaManager.onLoad.bind(mediaManager);
             mediaManager.onLoad = function(event) {
                 // Here we fully override the standard load event
